data/derived/comb/progs/unify/prog1974.ml.out
Characters 54-63:
  | h::t -> h + sumList t;;
                ^^^^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
